# first_rpg_game

./: .gitignore  README.md  pyproject.toml  setup.py
first_rpg_game/: __init__.py  main.py
first_rpg_game/game/: __init__.py  player.py  scene_keys.py
first_rpg_game/game/enemies/: __init__.py  enemy.py  red_enemy.py
first_rpg_game/game/game_characters/: __init__.py  enemy.py  player.py
first_rpg_game/game/map/: __init__.py
first_rpg_game/game/map/locations/: __init__.py  start_location.py
first_rpg_game/game/scenes/: game_scene.py  new_game_scene.py  start_menu_scene.py  tmp_game_scene.py
first_rpg_game/game/sprites/: movable.py  player.py
first_rpg_game/rpg_engine/: __init__.py  engine_settings.py
first_rpg_game/rpg_engine/config/: __init__.py
first_rpg_game/rpg_engine/graphics/: colors.py  fonts.py
first_rpg_game/rpg_engine/helpers/: coordinates_helper.py  images_helper.py
first_rpg_game/rpg_engine/objects/: __init__.py
first_rpg_game/rpg_engine/objects/interactive_objects/: __init__.py  button.py  character.py  input_field.py  interactive_object_types.py  interactive_text.py
first_rpg_game/rpg_engine/objects/static_objects/: text_object.py
first_rpg_game/rpg_engine/scene/: __init__.py
first_rpg_game/rpg_engine/scene/components/: form_scene.py  menu_scene.py  splash_scene.py
first_rpg_game/rpg_engine/sprites/: controllable_sprite.py  image_sprite.py
scripts/: build.py
