[tool.poetry]
name = "first-rpg-game"
version = "0.1.0"
description = ""
authors = ["diggoDev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cx-freeze = "^7.2.0"
pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.5"
pep8-naming = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "first_rpg_game.main:main"
build = "scripts.build:main"
